test_certificates/invalid_chain_of_trust/rootCA.srl
02EAF506CDB83633D7B6C235B202A2D5480ACB37
